# gpu-nature

./: .eslintrc.js  .gitignore  .prettierrc.js  Cargo.toml  README.MD  build.rs  build_for_wasm.rs  package.json  rustfmt.toml  vite.config.js  webpack.config.js
examples/: nature.rs  particles.rs  pbd.rs
iOS/: README.MD
iOS/wgpu_test/: ViewController.swift  libwgpu.h  wgpu_test-Bridging-Header.h
iOS/wgpu_test.xcodeproj/: project.pbxproj
shader-wgsl/: bufferless.vs.wgsl  clear_color.wgsl  diffraction.wgsl  diffraction_vertex.wgsl  field_setting.wgsl  floor.wgsl  perlin_noise.wgsl  present.wgsl  simple.wgsl  trajectory_update.wgsl
shader-wgsl/3d_lbm/: boundary.wgsl  collide_stream.wgsl  d3q15_layout_and_fn.wgsl  init.wgsl  particles_present.wgsl  particles_update.wgsl
shader-wgsl/3d_lbm/struct/: 3d_particle.wgsl
shader-wgsl/aa_lbm/: aa_boundary.wgsl  aa_collide_stream.wgsl  aa_init.wgsl  aa_layout_and_fn.wgsl
shader-wgsl/aa_lbm/struct/: lbm_uniform.wgsl
shader-wgsl/filter/: gaussian_blur_r.comp.glsl
shader-wgsl/lbm/: blend_img.wgsl  boundary.wgsl  collide_stream.wgsl  curl_update.wgsl  d2q9_fn.wgsl  init.wgsl  layout_and_fn.wgsl  particle_update.wgsl  present.wgsl  trajectory_present.wgsl
shader-wgsl/lbm/struct/: lattice_info.wgsl  lbm_uniform.wgsl
shader-wgsl/noise/: 3d_noise_tex.wgsl  fn_perlin_noise.wgsl  marble_tex.wgsl  perlin_noise.wgsl
shader-wgsl/pbd/: cloth_bend_solver.wgsl  cloth_display.wgsl  cloth_layout.wgsl  cloth_layout2.wgsl  cloth_predict_and_reset.wgsl  cloth_predict_and_reset2.wgsl  cloth_stretch_solver.wgsl
shader-wgsl/pbd/brush/: bending_solver.wgsl  debug_plane.wgsl  display.wgsl  predict.wgsl  stretch_solver.wgsl
shader-wgsl/pbd/brush/struct/: brush_uniform.wgsl  particle.wgsl
shader-wgsl/pbd/struct/: cloth_uniform.wgsl  collision.wgsl  dynamic_uniform.wgsl  particle.wgsl
shader-wgsl/pbd/xxpbd/: cloth_bending_solver.wgsl  cloth_predict.wgsl  cloth_stretch_solver.wgsl
shader-wgsl/procedural/: brick.wgsl
shader-wgsl/struct/: canvas.wgsl  field.wgsl  particle.wgsl
src/: brick.rs  canvas.rs  combinate_canvas.rs  diffraction.rs  ffi_ios.rs  field_player.rs  field_velocity_code.rs  floor.rs  lib.rs  setting_obj.rs
src/filter/: canny_edge_detection.rs  gaussian_blur.rs  luminance_filter.rs  one_in_one_out.rs
src/fluid/: aa_d2q9_node.rs  d2q9_node.rs  d3_fluid_player.rs  d3_particles_render_node.rs  d3q15_node.rs  fluid_player.rs  lattice.rs  mod.rs  particle_render_node.rs
src/noise/: cpu_simplex_noise.rs  d3_noise_texture.rs  mod.rs  noise_image.rs
src/pbd/: bristle.rs  brush.rs  cal_bend_constraints.rs  cloth.rs  cloth3.rs  cloth_x.rs  line.rs  line_particle.rs  mod.rs  particle.rs  particle3.rs  pbd_canvas.rs
src/util/: load_texture.rs  mod.rs  mvp_uniform_obj.rs  shader.rs
src/util/geometry/: line.rs  plane.rs
src/util/math/: line_segment.rs  mod.rs
src/util/node/: binding_group_setting.rs  bufferless_fullscreen_node.rs  compute_node.rs  dynamic_uniform_binding_group.rs  view_node.rs
src/util/utils/: matrix_helper.rs
src/web/: create_shader_module.rs  ffi.rs  mod.rs
web/: index.js
web/src/: App.vue  Setting.vue  global.css  global.scss  main.js
web/src/components/: CanvasContainer.vue  ParticlesParameter.vue  StepNumber.vue
web/static/: index.html
